Fix dark mode styling for Links

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,6 +118,10 @@ article time {
     text-underline-offset: 3px;
 }
 
+.dark .prose a {
+    color: #fff;
+}
+
 .prose .button {
     text-decoration: none;
     background: #222;
